# 3d-quotes

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  LICENSE  README.md  docker-compose.yml
PRPs/: 3d-printing-quote-tool.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements-test.txt  requirements.txt
backend/config/: __init__.py  settings.py
backend/models/: __init__.py  customer.py  order.py  quote.py
backend/routers/: __init__.py  order.py  payment.py  quote.py
backend/schemas/: __init__.py  customer.py  order.py  quote.py
backend/services/: __init__.py  email_service.py  pricing_calculator.py  stl_processor.py  stripe_service.py  zoho_service.py
backend/tests/: __init__.py  conftest.py  test_pricing_calculator.py  test_stl_processor.py  test_stripe_service.py
backend/utils/: __init__.py  helpers.py  validators.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: FileUpload.tsx  MaterialSelector.tsx  OrderConfirmation.tsx  PaymentForm.tsx  QuoteDisplay.tsx
frontend/src/hooks/: useFileUpload.ts  useStripe.ts
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts  validators.ts
nginx/: nginx.conf
